--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,7 @@
     "builds": [
       {
         "src": "dist/main.js",
-        "use": "@vercel/node",
-        "config": {"includesFiles": ["dist/**"]}
+        "use": "@vercel/node"
       }
     ],
     "routes": [
