--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "nest build",
     "migrate": "prisma migrate deploy",
     "postinstall": "echo 'Running migrations...' && npm run migrate",
+    "install": "echo 'Iniciando a instalação das dependências...' && npm install",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
