--- a/package.json
+++ b/package.json
@@ -7,9 +7,6 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
-    "migrate": "prisma migrate deploy",
-    "postinstall": "echo 'Running migrations...' && npm run migrate",
-    "install": "echo 'Iniciando a instalação das dependências...' && npm install",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -20,7 +17,9 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "migrate": "echo 'Executing migrations...' && prisma migrate deploy",
+    "postinstall": "npm run migrate"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
