--- a/vercel.json
+++ b/vercel.json
@@ -10,9 +10,11 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "dist/main.js",
-      "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
+      "dest": "dist/main.js"
     }
-  ]
+  ],
+  "hooks": {
+    "postinstall": "npm run migrate"
+  }
 }
   
