--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,15 @@
   "version": 2,
   "builds": [
     {
-      "src": "dist/main.js",
-      "use": "@vercel/node",
-      "config": { "IncludeFile": ["dist/**"] }
+      "src": "src/main.js",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "dist/main.js"
+      "dest": "src/main.js",
+      "methods": ["GET", "POST", "PUT", "DELETE"]
     }
   ]
 }
