--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,11 @@ JWT_EXPIRATION_TIME=
 # Database
 DATABASE_URL=
 
+PORT=
+
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
+
+URL_DEV=
+URL_PRODUCTION=
